--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -1,13 +1,12 @@
 stages:
-  - build
-  # - test
-  - deploye
+  - build_test
+  - deploy_test
+  - build_production
+  - deploy_production
 
-dind_build:
-  image: gitlabregistry.elyas.ir/elyas/dind:latest
-  stage: build
-  tags:
-    - build
+build_test:
+  image: gitlabregistry.elyas.ir/elyas/docker_images:dind_stable
+  stage: build_test
   only:
     - test
   services:
@@ -15,37 +14,64 @@ dind_build:
       alias: thedockerhost
   variables:
     DOCKER_HOST: tcp://thedockerhost:2375/
-    # Use the overlayfs driver for improved performance:
     DOCKER_DRIVER: overlay2
-    DOCKER_TLS_CERTDIR: "" 
-  script:
+    DOCKER_TLS_CERTDIR: ""
+  before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  script:
+    - docker pull $CI_REGISTRY_IMAGE:test
+    - docker build -t $CI_REGISTRY_IMAGE:test --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from $CI_REGISTRY_IMAGE:test .
+    - docker push $CI_REGISTRY_IMAGE:test
+  after_script:
+    - docker logout
+
+build_production:
+  image: gitlabregistry.elyas.ir/elyas/docker_images:dind_stable
+  stage: build_production
+  only:
+    - master
+  services:
+    - name: docker:dind
+      alias: thedockerhost
+  variables:
+    DOCKER_HOST: tcp://thedockerhost:2375/
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  script:
     - docker pull $CI_REGISTRY_IMAGE:latest
     - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA --cache-from $CI_REGISTRY_IMAGE:latest .
     - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA $CI_REGISTRY_IMAGE:latest
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
     - docker push $CI_REGISTRY_IMAGE:latest
   after_script:
-    - docker logout $CI_REGISTRY
+    - docker logout
 
-# test_mis_react:
-#   stage: test
-#   tags:
-#     - test
-#   only:
-#     - test
-#   script:
-
-deploye_newimage:
-  stage: deploye
+deploy_production:
+  stage: deploy_production
   tags:
     - production
+  only:
+    - master
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  script:
+    - docker-compose up -d
+  after_script:
+    - docker logout
+
+deploy_test:
+  stage: deploy_test
+  tags:
+    - test
   only:
     - test
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - docker-compose down
-    - docker-compose up -d
+    - docker compose -f docker-compose_test.yml down
+    - docker compose -f docker-compose_test.yml up -d
   after_script:
     - docker logout $CI_REGISTRY
+    - docker rmi $(docker images -f "dangling=true" -q)
